# Hackathon-0-FTEs

./: .env.example  .gitignore  CONSTITUTIONAL_VALIDATION.md  CONTRIBUTING.md  FIXES_SUMMARY.md  GMAIL_SETUP.md  GRADUATION_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.md  README.md  SETUP_COMPLETE.md  TEST_RESULTS.md  TEST_WITHOUT_CREDENTIALS.md  TROUBLESHOOTING.md  VERIFICATION_REPORT.md  WHATSAPP_IMPLEMENTATION.md  WHATSAPP_QUICKSTART.md  WHATSAPP_SETUP.md  WINDOWS_QUICKSTART.md  main.py  package.json  pyproject.toml  requirements.txt  run_production.ps1  run_test.ps1  test-production-mode.md  validate_silver.py  verify_whatsapp.py  whatsapp_bridge.js
AI_Employee_Vault/: Business_Goals.md  Dashboard.md  Plan.md  __init__.py
mcp_servers/: email_server.py  linkedin_server.py  mcp_base.py  server_config.json
monitored/: demo-1771280341.txt  final-test.txt  test-1771279413.txt  test-demo-1771279783.txt  test-fixed-1771281608.txt  test-live-1771280166.txt  test-special-1771281860.txt
scripts/: __init__.py  approval_workflow.py  archive_logs.py  business_goals_reader.py  crontab.txt  event_queue.py  event_validator.py  file_utils.py  generate_weekly_report.py  health_check.py  linkedin_scheduler.py  logger.py  mcp_client.py  orchestrator.py  performance_validation.py  plan_generator.py  post_generator.py  risk_classifier.py  run_watchers.py  scheduler_setup.sh  security_audit.py  setup_macos_scheduler.sh  setup_windows_scheduler.ps1  step_executor.py  task_analyzer.py  update_dashboard.py  validate_constitutional_compliance.py  validate_quickstart.py  (+3 more)
(+117 files in other folders)
